feat(fc-msa-gocoupon): setup router
