# fc-msa-gocoupon/coupon-service/api/v1/handler/coupon_handler.go
@@ -19,7 +19,23 @@ func NewCouponHandler() *couponHandler {
 // @Produce json
 // @Success 200 {array} string
 // @Router /coupons [get]
-func (h *couponHandler) GetCoupons(c *gin.Context) {
+func (h *couponHandler) IssueCoupon(c *gin.Context) {
 	c.JSON(http.StatusOK, []string{"Coupon", "V1"})
 
+}
+
+func (h *couponHandler) UseCoupon(c *gin.Context) {
+	c.JSON(http.StatusOK, []string{"Coupon", "V1"})
+}
+
+func (h *couponHandler) CancelCoupon(c *gin.Context) {
+	c.JSON(http.StatusOK, []string{"Coupon", "V1"})
+}
+
+func (h *couponHandler) FindCoupon(c *gin.Context) {
+	c.JSON(http.StatusOK, []string{"Coupon", "V1"})
+}
+
+func (h *couponHandler) FindMyCoupons(c *gin.Context) {
+	c.JSON(http.StatusOK, []string{"Coupon", "V1"})
 }
